--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ description = "This is an example description"
 compile_sass = true
 
 # Whether to build a search index to be used later on by a JavaScript library
-build_search_index = true
+build_search_index = false
 
 theme = "apollo"
 taxonomies = [{ name = "tags" }]
@@ -23,7 +23,6 @@ highlight_theme = "ayu-light"
 [extra]
 # Put all your custom variables here
 theme = "toggle"
-toc = true
 fancy_code = true
 dynamic_note = true
 
@@ -31,9 +30,9 @@ mathjax = true
 mathjax_dollar_inline_enable = true
 
 menu = [
-    { name = "/posts", url = "/posts", weight = 1 },
-    { name = "/projects", url = "/projects", weight = 2 },
-    { name = "/about", url = "/about", weight = 3 },
+    { name = "/about", url = "/about", weight = 1 },
+    { name = "/posts", url = "/posts", weight = 2 },
+    { name = "/projects", url = "/projects", weight = 3 },
     { name = "/tags", url = "/tags", weight = 4 },
 ]
 
