--- a/config.toml
+++ b/config.toml
@@ -37,6 +37,8 @@ menu = [
 ]
 
 socials = [
-  { name = "twitter", url = "https://twitter.com/not_matthias", icon = "twitter" },
-  { name = "github", url = "https://github.com/not-matthias/", icon = "github" },
+  { name = "facebook", url = "https://www.facebook.com/1048576.sqrt/", icon = "facebook"},
+  { name = "instagram", url = "https://www.instagram.com/jason_10.24/", icon = "instagram"},
+  { name = "linkedin", url = "https://www.linkedin.com/in/wen-chieh-sie-066943237/", icon = "linkedin"},
+  { name = "github", url = "https://github.com/jasonsie1024", icon = "github" },
 ]
